--- a/index.html
+++ b/index.html
@@ -143,11 +143,16 @@
 
 
             <div class="fluid" style="margin-top: 20px;">
-                changes
+                Besides productivity, I also analyzed potential changes on the composition of the agricultural sector. The question of the transmission channels of 
+                SV is also important, as it says something about the timing of effects. If the potential effects on productivity are due to increases on capital stock,
+                we would expect effects to be long-termed. Transfers, however, can also be used to finance short-term consumption or to finance the acquisition of human 
+                capital. Either of these mechanisms would result in a short-term (if at all existing) effect on productivity. To analyze this matter, I tested for changes 
+                in the composition of agriculture on treated municipalities between rain-fed and irrigation (intensive in capital) agriculture using the same
+                method mentioned earlier.
             </div>
 
             <div class="fluid">
-                Using municipality-level data obtained from Mexican authorities, we find a short-lived, positive and statistically significant effect 
+                I found a short-lived, positive and statistically significant effect 
                 on agricultural productivity as well as no evidence that these changes are induced by increases in the capital stock of rural households. 
                 Our results point to a severe lack of follow-ups from local authorities to the program's beneficiaries, limiting its potential effects. 
                 Further research is needed to determine the transmission mechanisms of this policy.
