--- a/index.html
+++ b/index.html
@@ -82,12 +82,6 @@
                         experienced in data visualization and visual storytelling. I have strong quantitative and statistical programming skills, specifically
                         in R.
                     </div>
-                    <ul>
-                        <li>Alan Bean</li>
-                        <li>Peter Conrad</li>
-                        <li>Edgar Mitchell</li>
-                        <li>Alan Shepard</li>
-                    </ul>
                 </div>
             </div>
 
@@ -112,10 +106,10 @@
             </div>
 
             <div class="fluid">
-                For this study, I aggregated data from four different sources: (1) <a href="https://pub.bienestar.gob.mx/v2/pub/"><i>Padrón Único de Beneficiarios</i></a>,
-                a public data-source containing information on all recipients of social programs in Mexico; (2) <a href="https://www.gob.mx/siap/acciones-y-programas/produccion-agricola-33119"><i>Sistema de Información Agroalimentaria y Pesquera</i></a>,
-                a dataset containing agricultural production and productivity, disaggregated by municipality and crop, with monthly observations; (3) <a href="https://smn.conagua.gob.mx/es/climatologia/temperaturas-y-lluvias/resumenes-mensuales-de-temperaturas-y-lluvias"><i>Reportes Mensuales de Temperaturas y Lluvias</i></a>,
-                information published by the National Water Service of Mexico reporting average temperature and total m.m. of rain; and (4) <a href="https://www.gob.mx/ran"><i>Registro Agrario Nacional</i></a>,
+                For this study, I aggregated data from four different sources: (1) <a href="https://pub.bienestar.gob.mx/v2/pub/" target="_blank"><i>Padrón Único de Beneficiarios</i></a>,
+                a public data-source containing information on all recipients of social programs in Mexico; (2) <a href="https://www.gob.mx/siap/acciones-y-programas/produccion-agricola-33119" target="_blank"><i>Sistema de Información Agroalimentaria y Pesquera</i></a>,
+                a dataset containing agricultural production and productivity, disaggregated by municipality and crop, with monthly observations; (3) <a href="https://smn.conagua.gob.mx/es/climatologia/temperaturas-y-lluvias/resumenes-mensuales-de-temperaturas-y-lluvias" target="_blank"><i>Reportes Mensuales de Temperaturas y Lluvias</i></a>,
+                information published by the National Water Service of Mexico reporting average temperature and total m.m. of rain; and (4) <a href="https://www.gob.mx/ran" target="_blank"><i>Registro Agrario Nacional</i></a>,
                 a comprehensive survey of Social Property in Mexico.
             </div>
 
@@ -130,9 +124,13 @@
                 </div>
             </div>
 
+            <div>
+                For the purposes of this analysis
+            </div>
+
             <div class="fluid">
                 I seek to answer whether the application of <i>Sembrando Vida</i> had an effect on agricultural productivity on the rural areas of Mexico. To do so,
-                I exploited the staggered nature of SV's application, and thus, use the Event Study design proposed by <a href="https://academic.oup.com/restud/article/91/6/3253/7601390?login=false">Borusyak, et. Al (2024)</a>.
+                I exploited the staggered nature of SV's application, and thus, use the Event Study design proposed by <a href="https://academic.oup.com/restud/article/91/6/3253/7601390?login=false" target="_blank">Borusyak, et. Al (2024)</a>.
                 To analyze this question, I built a simple productivity metric, defined as yield per unit of land. If \(y_{i,t}\) is such productivity metric,
                 then our methodology seeks to estimate the discrete effect of a unit increase in the number of beneficiaries, conditional on all other regressors:
             </div>
@@ -158,7 +156,30 @@
                 Further research is needed to determine the transmission mechanisms of this policy.
             </div>
 
-                
+            <div style="border-bottom: 2px solid #777777; margin-top: 40px; margin-bottom: 40px"></div>
+
+            <h3 style="margin-top: 20px; margin-bottom: 20px; text-align: justify;">
+                Teaching Assistant: <a href="https://cee.colmex.mx/archivos/QWN0aW9uVGV4dDo6UmljaFRleHQKIDEyMAplbWJlZHM=/Macroeconomía%20III.pdf" target="_blank">Macroeconomics III</a>
+            </h3>
+
+            <div class="row">
+                <div class="col-sm-4">
+                    <iframe src="files/macroIII.pdf" width="100%" height="600px"></iframe>
+                </div>
+                <div class="col-sm-8"> 
+                  <div style="text-align: justify;">
+                    <b>Instructor: </b>Alberto Gallegos David, Ph.D. <br>
+                    <b>Winter 2024</b> <br>
+                    <br>
+                    <b>T.A. Sessions:</b>
+                    <ul>
+                        <li>
+                            <a href="files/lab1" target="_blank"><i>Laboratorio 1</i></a>
+                        </li>
+                    </ul>
+                  </div>
+                </div>
+            </div>
 
         </div>
 
@@ -305,6 +326,7 @@
             </div>
 
         </div>
+
         <div class="tab-pane fade" id="misc">
             <h2 style="font-weight: 600;">Miscelaneous</h2>
             <p>Get in touch with us.</p>
