--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
             <div class="row">
                 <div class="col-sm-4">
-                    <iframe src="files/macroIII.pdf" width="100%" height="600px"></iframe>
+                    <iframe src="files/macro/macroIII.pdf" width="100%" height="600px"></iframe>
                 </div>
                 <div class="col-sm-8"> 
                   <div style="text-align: justify;">
@@ -172,11 +172,66 @@
                     <b>Winter 2024</b> <br>
                     <br>
                     <b>T.A. Sessions:</b>
-                    <ul>
-                        <li>
-                            <a href="files/lab1" target="_blank"><i>Laboratorio 1</i></a>
-                        </li>
-                    </ul>
+                    <div style="margin-top: 20px; margin-bottom: 20px;">
+                        <ul>
+                            <li>
+                                <a href="files/macro/lab1.pdf" target="_blank"><i>Laboratorio 1:</i></a> Students are asked to search for and built visualizations
+                                regarding some national accounts of Mexico.
+                            </li>
+                            <li>
+                                <a href="files/macro/lab2_1.pdf" target="_blank"><i>Laboratorio 2:</i></a> Students are asked to solve exercises to review micro-founded
+                                macroeconomic models with multiple periods (both finite and infinite).
+                            </li>
+                            <li>
+                                <a href="files/macro/lab2_2.pdf" target="_blank"><i>Laboratorio 3:</i></a> Students are asked to derive the movement equations of the 
+                                Solow-Swan model in discrete time as well as analytic forms of growth rates. Closed forms solutions for the model are also required.
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        The rest of the T.A. sessions were devoted to reviewing the theoretical material of the course. It's content aligns with the sessions
+                        outlined on the syllabus.
+                    </div>
+                  </div>
+                </div>
+            </div>
+
+            <div style="border-bottom: 2px solid #777777; margin-top: 40px; margin-bottom: 40px"></div>
+
+            <h3 style="margin-top: 20px; margin-bottom: 20px; text-align: justify;">
+                Teaching Assistant: <a href="https://cee.colmex.mx/archivos/QWN0aW9uVGV4dDo6UmljaFRleHQKIDEyMAplbWJlZHM=/Econometria%20II.pdf" target="_blank">Econometrics II</a>
+            </h3>
+
+            <div class="row">
+                <div class="col-sm-4">
+                    <iframe src="files/econometria/econometriaII.pdf" width="100%" height="600px"></iframe>
+                </div>
+                <div class="col-sm-8"> 
+                  <div style="text-align: justify;">
+                    <b>Instructor: </b>Edwin van Gameren, Ph.D. <br>
+                    <b>Spring 2024</b> (Ongoing) <br>
+                    <br>
+                    <b>T.A. Sessions:</b>
+                    <div style="margin-top: 20px; margin-bottom: 20px;">
+                        <ul>
+                            <li>
+                                <a href="files/macro/lab1.pdf" target="_blank"><i>Laboratorio 1:</i></a> Students are asked to search for and built visualizations
+                                regarding some national accounts of Mexico.
+                            </li>
+                            <li>
+                                <a href="files/macro/lab2_1.pdf" target="_blank"><i>Laboratorio 2:</i></a> Students are asked to solve exercises to review micro-founded
+                                macroeconomic models with multiple periods (both finite and infinite).
+                            </li>
+                            <li>
+                                <a href="files/macro/lab2_2.pdf" target="_blank"><i>Laboratorio 3:</i></a> Students are asked to derive the movement equations of the 
+                                Solow-Swan model in discrete time as well as analytic forms of growth rates. Closed forms solutions for the model are also required.
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        The rest of the T.A. sessions were devoted to reviewing the theoretical material of the course. It's content aligns with the sessions
+                        outlined on the syllabus.
+                    </div>
                   </div>
                 </div>
             </div>
