--- a/index.html
+++ b/index.html
@@ -400,11 +400,13 @@
         </div>
 
         <div class="tab-pane fade" id="pdf">
-            <iframe 
-                src="https://drive.google.com/file/d/1QFv4W0m6F3QYAeb8DTBE220sV_SKo7tq/preview" 
+            <div>
+                <iframe 
+                src="files/cv.pdf" 
                 width="100%" 
                 height="800px">
             </iframe>
+            </div>
         </div>
     </div>
 </div>
