--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
                         in R.
                     </div>
                 </div>
+
+
+
             </div>
 
         </div>
@@ -398,45 +401,8 @@
             <div class="fluid">
                 My main task at <a href="https://www.gob.mx/atdt" target="_blank"><i>Agencia de Transformación Digital y Telecomunicaciones</i></a> has been 
                 developing web applications to follow up a wide variety of indicators relevant to the Federal Administration of Mexico. Due to confidentiality 
-                reasons, I cannot directly share the code. However, I share remote access to the four most recent applications I've developed. All information
-                displayed on these mock dashboards has been randomly generated. The final version of the applications used by the Mexican Government are hosted
+                reasons, I cannot directly share the code. The final version of the applications used by the Mexican Government are hosted
                 on Shiny Server running on RedHat.
-            </div>
-
-            <div class="fluid" style="margin-top: 20px;">
-                <ul>
-                    <li>
-                        <a href="https://danielkelly23.shinyapps.io/seguridad/" target="_blank"><i>Seguridad</i>:</a> This dashboard provides
-                        a complete cover of crimes in Mexico. It contains disaggregation to the municipality level, and allows filtering by geographic location and
-                        type of crimes. It also contains a general summary for each state. Development time: 3 weeks.
-                        <div style="border: 5px solid #F5F5F5; text-align: center; margin-top: 10px; margin-bottom: 30px;">
-                            <img src="files/seguridad.png" width="100%">
-                        </div>
-                    </li>
-                    <li style="margin-top: 20px">
-                        <a href="https://danielkelly23.shinyapps.io/migracion/" target="_blank"><i>Centros de Atención a Migrantes</i>:</a> This dashboard provides
-                        follow-up to the occupation of several immigration shelters, operated by the Mexican Government on the northern frontier of the country. Development time:
-                        4 days.
-                        <div style="border: 5px solid #F5F5F5; text-align: center; margin-top: 10px; margin-bottom: 30px;">
-                            <img src="files/migrantes.png" width="100%">
-                        </div>
-                    </li>
-                    <li style="margin-top: 20px">
-                        <a href="https://danielkelly23.shinyapps.io/aduanas/" target="_blank"><i>Recaudación en Aduanas</i>:</a> This dashboard provides
-                        follow-up to the collection of taxes at Mexico's customs, with information disaggregated by custom, and authority in charge.
-                        <div style="border: 5px solid #F5F5F5; text-align: center; margin-top: 10px; margin-bottom: 30px;">
-                            <img src="files/aduanas.png" width="100%">
-                        </div>
-                    </li>
-                    <li style="margin-top: 20px">
-                        <a href="https://danielkelly23.shinyapps.io/becabj/" target="_blank"><i>Beca Benito Juárez</i>:</a> This dashboard provides
-                        follow-up to the advances in the registry for <i>Beca del Bienestar Benito Juárez</i>. It contains information disaggregated to the school level,
-                        as well as geographic visualizations.
-                        <div style="border: 5px solid #F5F5F5; text-align: center; margin-top: 10px; margin-bottom: 30px;">
-                            <img src="files/bbj.png" width="100%">
-                        </div>
-                    </li>
-                </ul>
             </div>
 
             <div style="border-bottom: 2px solid #777777; margin-top: 40px; margin-bottom: 40px"></div>
@@ -2274,6 +2240,8 @@ dev.off()
                 height="800px">
             </iframe>
             </div>
+
+
         </div>
 
     </div>
